add farmer pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>Agrolink[GH] | Official Webpage</title>
+	<title>CassaGreen | Official Webpage</title>
 	<meta name="description" content="Free Responsive Html5 Css3 Templates | zerotheme.com">
 	<meta name="author" content="www.zerotheme.com">
 	
@@ -50,7 +50,7 @@
 					<div class="hero-content-wrapper">
 					  <div class="hero-content">
 						<h4 class="h-alt hero-subheading wow fadeIn" data-wow-duration="2s" data-wow-delay=".7s">Best Gardening Services</h4>
-						<h1 class="hero-lead wow fadeInLeft" data-wow-duration="1.5s">AGROLINK<br> GHANA</h1>
+						<h1 class="hero-lead wow fadeInLeft" data-wow-duration="1.5s">CASSA<br> GREEN</h1>
 						<a href="about.html" class="button button-skin wow fadeIn" data-wow-duration="2s" data-wow-delay="1s">Read More</a>
 					  </div>
 					</div>
@@ -69,7 +69,7 @@
 			<!---Top Menu--->
 			<div id="cssmenu" >
 				<ul>
-				   <li class="active"><a href="index.html"><span>AGROLINK</span></a></li>
+				   <li class="active"><a href="index.html"><span>CASSAGREEN</span></a></li>
 				   <li><a href="blog.html"><span>Our Blog</span></a></li>
 				   <li><a href="about.html"><span>About</span></a></li>
 				   <li class="last"><a href="contact.html"><span>Contact</span></a></li>
@@ -259,7 +259,7 @@
 										<div class="portfolio-box-caption">
 											<div class="portfolio-box-caption-content">
 												<div class="project-name">
-													
+													Assorted
 												</div>
 												<div class="project-category">
 													Category
@@ -368,7 +368,7 @@
 														<span><a href="farmer1.html">AGYA BONSU</a></span>
 														<h3><a href="#">Make Ahead Super Green Vegan Quinoa Sandwich.</a></h3>
 														<p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
-														<a class="button button-skin" href="single.html">Read More</a>
+														<a class="button button-skin" href="farmer1.html">Order Now</a>
 													</div>
 												</div>
 											</div>
@@ -385,7 +385,7 @@
 														<span><a href="farmer2.html">KWAME AKWETEY</a></span>
 														<h3><a href="#">Make Ahead Super Green Vegan Quinoa Sandwich.</a></h3>
 														<p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
-														<a class="button button-skin" href="single.html">Read More</a>
+														<a class="button button-skin" href="farmer2.html">Order Now</a>
 													</div>
 												</div>
 											</div>
@@ -402,7 +402,7 @@
 														<span><a href="farmer3.html">kWAKU FORSON</a></span>
 														<h3><a href="#">Make Ahead Super Green Vegan Quinoa Sandwich.</a></h3>
 														<p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
-														<a class="button button-skin" href="single.html">Read More</a>
+														<a class="button button-skin" href="farmer3.html">Order Now</a>
 													</div>
 												</div>
 											</div>
