--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<html lang="en">
 <head>
 
     <!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>zSeeds - Free Html5 Templates</title>
+	<title>CassaGreen | About</title>
 	<meta name="description" content="Free Responsive Html5 Css3 Templates | zerotheme.com">
 	<meta name="author" content="www.zerotheme.com">
 	
@@ -38,20 +35,6 @@
 	
 	<!-- JS -->
 	
-	
-
-	<!--[if lt IE 8]>
-       <div style=' clear: both; text-align:center; position: relative;'>
-         <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
-           <img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
-        </a>
-      </div>
-    <![endif]-->
-    <!--[if lt IE 9]>
-		<script src="js/html5.js"></script>
-		<script src="js/css3-mediaqueries.js"></script>
-	<![endif]-->
-    
 </head>
 <body id="page-top" class="sub-page">
 <div class="wrap-body">
@@ -75,29 +58,13 @@
 			
 			<!---Top Menu--->
 			<div id="cssmenu" >
-				<ul>
-				   <li class="active"><a href="index.html"><span>zSeeds</span></a></li>
-				   <li class="has-sub"><a href="#"><span>Category</span></a>
-					  <ul>
-						 <li class="has-sub"><a href="#"><span>Item 1</span></a>
-							<ul>
-							   <li><a href="#"><span>Sub Item</span></a></li>
-							   <li class="last"><a href="#"><span>Sub Item</span></a></li>
-							</ul>
-						 </li>
-						 <li class="has-sub"><a href="#"><span>Item 2</span></a>
-							<ul>
-							   <li><a href="#"><span>Sub Item</span></a></li>
-							   <li class="last"><a href="#"><span>Sub Item</span></a></li>
-							</ul>
-						 </li>
-					  </ul>
-				   </li>
-				   <li><a href="archive.html"><span>Archive</span></a></li>
-				   <li><a href="single.html"><span>About</span></a></li>
-				   <li class="last"><a href="contact.html"><span>Contact</span></a></li>
-				</ul>
-			</div>
+					<ul>
+					   <li class="active"><a href="index.html"><span>CASSAGREEN</span></a></li>
+					   <li><a href="blog.html"><span>Our Blog</span></a></li>
+					   <li><a href="about.html"><span>About</span></a></li>
+					   <li class="last"><a href="contact.html"><span>Contact</span></a></li>
+					</ul>
+				</div>
 			
 		</div>
 	</header>
